--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .sliding-div {
   position: fixed;
   top: 0;
-  left: -300px; /* Hide the div initially off-screen */
+  left: -300px;
   width: 300px;
   height: 100%;
   background-color: lightgray;
@@ -12,7 +12,7 @@
 }
 
 .sliding-div.open {
-  left: 0; /* Slide in the div */
+  left: 0;
 }
 
 .close-btn {
@@ -70,4 +70,44 @@
 
 .switch-checkbox:checked + .switch-label:before {
   transform: translateX(26px);
+}
+.TitleCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+.TitleCenter input {
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 600;
+  border-color: #f95959;
+  color: #f95959;
+}
+.Options {
+  display: flex;
+  gap: 5px;
+  margin-top: 10px;
+}
+.option {
+  margin: 5px;
+  padding: 5px;
+  border-radius: 4px;
+  background-color: #f95959;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.sectionTitle {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+.mainContent {
+  margin-top: 0px;
+  margin: 10px 10%;
 }
