--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,36 @@
   margin-top: 0px;
   margin: 10px 10%;
 }
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-inner {
+  position: relative;
+  padding: 20px;
+  width: 800px;
+  max-height: 80%; /* Set max height */
+  background: white;
+  border-radius: 10px;
+  overflow-y: auto; /* Enable vertical scrolling */
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: red;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
